--- a/mymwebsite/templates/cases/businessideas.html
+++ b/mymwebsite/templates/cases/businessideas.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="{% static 'images/businessidea.jpg' %}">
     <meta property="og:image:width" content="1280">
     <meta property="og:image:height" content="720">
-    <meta property="og:url" content="{% url 'businessidea' %}">
+    <meta property="og:url" content="{% url 'businessideas' %}">
     <meta property="og:site_name" content="MyMensor Website">
     <meta property="fb:app_id" content="286196915140475"/>
 
