--- a/mymwebsite/templates/cases/businessideas.html
+++ b/mymwebsite/templates/cases/businessideas.html
@@ -43,7 +43,7 @@
             <a href="" class="ssk ssk-facebook"></a>
             <a href="" class="ssk ssk-twitter"></a>
             <a href="" class="ssk ssk-google-plus"></a>
-            <a href="whatsapp://send?text=https%3A%2F%2Fmymensor.com%2F{{ LANGUAGE_CODE }}%2Fcases%2Fassetmanagement"
+            <a href="whatsapp://send?text=https%3A%2F%2Fmymensor.com%2F{{ LANGUAGE_CODE }}%2Fcases%2Fbusinessideas"
                class="ssk ssk-whatsapp"></a>
             <a href="" class="ssk ssk-email"></a>
         </div>
@@ -53,7 +53,7 @@
     <script type="text/javascript">
         SocialShareKit.init({
             selector: '.ssk',
-            url: 'https://mymensor.com/{{ LANGUAGE_CODE }}/cases/assetmanagement/'
+            url: 'https://mymensor.com/{{ LANGUAGE_CODE }}/cases/businessideas/'
         });
     </script>
 {% endblock %}
