--- a/mymwebsite/templates/howto/businessideas.html
+++ b/mymwebsite/templates/howto/businessideas.html
@@ -11,7 +11,7 @@
         <p>{% trans "In order to use MyMensor to follow up subcontractor work you will use a combination of two cases other cases: " %}<a href="{% url 'genusemediaplan' %}" class="text-primary">{% trans "photo certification" %}</a>{% trans " and " %}<a href="{% url 'followingremotejobs' %}" class="text-primary">{% trans "following remote jobs." %}</a></p>
         <p>{% trans "Please refer to the cases and associated how-tos of those cases to understand how to perform such tasks." %}</p>
         <p>{% trans "To understand how MyMensor can support a Trade Marketing Agency, please refer to the " %}<a href="{% url 'routestrademarketing' %}" class="text-primary">{% trans "trade marketing" %}</a>{% trans " case and associated how-to." %}</p>
-        <p>{% trans "In either case, refer to the " %}<a href="{% url 'howtosetupautosharing' %}" class="text-primary">{% trans "how to setup auto-sharing guide" %}</a>{% trans " to configure this feature." %}</p>
+        <p>{% trans "In either case, refer to the " %}<a href="{% url 'setupautosharehowto' %}" class="text-primary">{% trans "how to setup auto-sharing guide" %}</a>{% trans " to configure this feature." %}</p>
         <p>{% trans "But that is just the begining! MyMensor can help you a lot with your new business. So, look no further, " %}
             <a id="registerbtn" class="registerbtn"
                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "start your 30-day free-trial now! " %}</a>{% trans "<mark>No Credit Card is required during trial period</mark> and, even when you have subscribed, you can easily cancel at any time, just clicking a button!" %}
