--- a/mymwebsite/templates/howto/setupautoshare.html
+++ b/mymwebsite/templates/howto/setupautoshare.html
@@ -21,9 +21,9 @@
 
         <p class="mt-5">{% trans "You can share also to email:" %}</p>
         <p>{% trans "<strong>1.</strong> Click on the <strong>Setup</strong> menu item and the on <strong>VPs</strong> in the dropdown menu." %}</p>
-        <p>{% trans "<strong>4.</strong> Select the VP that you want to publish using Email and fill the field <strong>Send all of this vp captures to the following email.</strong> with the email that you want to send the captures to." %}</p>
-        <p>{% trans "<strong>5.</strong> Please remember that you can remark your medias in the Mobile app prior to posting!" %}</p>
-        <p>{% trans "<strong>6.</strong> Press <strong>Submit</strong> to save your changes!" %}</p>
+        <p>{% trans "<strong>2.</strong> Select the VP that you want to publish using Email and fill the field <strong>Send all of this vp captures to the following email</strong> with the email that you want to send the captures to." %}</p>
+        <p>{% trans "<strong>3.</strong> Please remember that you can remark your medias in the Mobile app prior to posting!" %}</p>
+        <p>{% trans "<strong>4.</strong> Press <strong>Submit</strong> to save your changes!" %}</p>
         <p class="mt-5">{% trans "We hope this will make your life easier!" %}</p>
         <p>{% trans "So, look no further, " %}
             <a id="registerbtn" class="registerbtn"
