--- a/mymwebsite/templates/howto/businessideas.html
+++ b/mymwebsite/templates/howto/businessideas.html
@@ -8,7 +8,7 @@
         <h1 class="pb-3">{% trans "New Business Ideas Using MyMensor" %}</h1>
         <img class="card-img-top img-fluid pb-3" src="{% static 'images/businessidea.jpg' %}"
              alt={% trans "New out of the box idea." %}>
-        <p>{% trans "In order to use MyMensor to follow up subcontractor work you will use a combination of two cases other cases: " %}<a href="{% url 'genusemediaplan' %}" class="text-primary">{% trans "photo certification" %}</a>{% trans " and " %}<a href="{% url 'followingremotejobs' %}" class="text-primary">{% trans "following remote jobs." %}</a></p>
+        <p>{% trans "In order to use MyMensor to follow up subcontractor work you will use a combination of two cases: " %}<a href="{% url 'genusemediaplan' %}" class="text-primary">{% trans "photo certification" %}</a>{% trans " and " %}<a href="{% url 'followingremotejobs' %}" class="text-primary">{% trans "following remote jobs." %}</a></p>
         <p>{% trans "Please refer to the cases and associated how-tos of those cases to understand how to perform such tasks." %}</p>
         <p>{% trans "To understand how MyMensor can support a Trade Marketing Agency, please refer to the " %}<a href="{% url 'routestrademarketing' %}" class="text-primary">{% trans "trade marketing" %}</a>{% trans " case and associated how-to." %}</p>
         <p>{% trans "In either case, refer to the " %}<a href="{% url 'setupautosharehowto' %}" class="text-primary">{% trans "how to setup auto-sharing guide" %}</a>{% trans " to configure this feature." %}</p>
