--- a/mymwebsite/templates/cases.html
+++ b/mymwebsite/templates/cases.html
@@ -6,14 +6,6 @@
     <h1 class="mt-5 mb-5 ml-4">{% trans "MyMensor Use Cases" %}</h1>
     <hr>
     <div id="casestext" class="d-flex justify-content-start flex-wrap">
-        <div id="genusemediaplan" class="card m-3 card-outline-secondary" style="width: 22rem;">
-            <img class="card-img-top img-fluid" src="{% static 'images/genusemediaplan.jpg' %}"
-                 alt={% trans "Pinocchio sitting over a mobile phone." %}>
-            <div class="card-body p-3">
-                <h4 class="card-title">{% trans "Making Sure that a Photo is NOT a Fake" %}</h4>
-                <p class="card-text">{% trans "On this day and age, how can one be sure that a photo is not a fake? Of course there are a number of very sofisticated methods to assure that, with a high confidence percentage. But if we knew, for sure, how the photo was taken? Is it not an easier solution?" %}</p>
-            </div>
-        </div>
         <div id="followingjobs" class="card m-3 card-outline-secondary" style="width: 22rem;">
             <img class="card-img-top img-fluid" src="{% static 'images/followingremotejobs.jpg' %}"
                  alt={% trans "Staging for producing a fake photo." %}>
@@ -44,6 +36,22 @@
             <div class="card-body p-3">
                 <h4 class="card-title">{% trans "Facility Management, Managing Assets in a Simple Way" %}</h4>
                 <p class="card-text">{% trans "Taking care of our facilities and work tools is an everyday task to every manager, it does not mater the size of the business. Keeping track of asset data, location and condition can be a time consuming task. Or, maybe not?" %}</p>
+            </div>
+        </div>
+        <div id="genusemediaplan" class="card m-3 card-outline-secondary" style="width: 22rem;">
+            <img class="card-img-top img-fluid" src="{% static 'images/genusemediaplan.jpg' %}"
+                 alt={% trans "Pinocchio sitting over a mobile phone." %}>
+            <div class="card-body p-3">
+                <h4 class="card-title">{% trans "Making Sure that a Photo is NOT a Fake" %}</h4>
+                <p class="card-text">{% trans "On this day and age, how can one be sure that a photo is not a fake? Of course there are a number of very sofisticated methods to assure that, with a high confidence percentage. But if we knew, for sure, how the photo was taken? Is it not an easier solution?" %}</p>
+            </div>
+        </div>
+        <div id="businessideas" class="card m-3 card-outline-secondary" style="width: 22rem;">
+            <img class="card-img-top img-fluid" src="{% static 'images/businessidea.jpg' %}"
+                 alt={% trans "New out of the box idea." %}>
+            <div class="card-body p-3">
+                <h4 class="card-title">{% trans "New Business Ideas Using MyMensor" %}</h4>
+                <p class="card-text">{% trans "We will describe a couple of possible uses that you will have for the tool that MyMensor can be in your new business. We think that this will be very beneficial for your new endeavor, as it will keep costs down, it is very modern and safe, and if all goes wrong, you can just cancel with no hidden costs!" %}</p>
             </div>
         </div>
     </div>
