--- a/mymwebsite/templates/cases/routesservices.html
+++ b/mymwebsite/templates/cases/routesservices.html
@@ -2,22 +2,126 @@
 {% load staticfiles i18n %}
 {% get_current_language as LANGUAGE_CODE %}
 {% block title %}{% trans "Cases" %} - {{ block.super }}{% endblock %}
-{% block content %}
-    <div class="mx-auto w-75" style="padding-top: 2rem; padding-bottom: 2rem;">
-        <h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6>
-        <h1 class="pb-3">{% trans "Simple control of Sales Force using Certified Routes" %}</h1>
-        <img class="card-img-top img-fluid pb-3" src="{% static 'images/salperctrl.jpg' %}"
-                 alt={% trans "Many different routes in a city." %}>
-        <p>{% trans "Since we have created the first version of SeaMensor (that was the “father” of MyMensor), our friends ask us: - What can I do with this piece of software that I cannot do with my phone camera already?" %}</p>
-        <p>{% trans "At that time, it seemed to be a good question, but as time passes it became abundantly clear that <mark>forgery in the online world has become epidemic.</mark> So, seeing a photo or video that was sent to you in the usual channels is not enough anymore, you need proof!" %}</p>
-        <p>{% trans "One simple but defining feature of MyMensor is that <mark>you cannot insert any media into our system that was not produced by our mobile app.</mark> So, what you see in a video or photo coming from MyMensor was actually made by a smartphone camera, with no tampering, modification, enhancing, whatever, you name it." %}</p>
-        <p>{% trans "On top of that, MyMensor will tell you if time and location were certified and then you can trust that the media is really what it seems to be." %}</p>
-        <p>{% trans "This what I call a general, simple use to MyMensor Media: media certification." %}</p>
-        <p>{% trans "But that is just the tip of he iceberg! There is a lot more to MyMensor Media: automatic filing, automatic sharing etc. So, look no further, " %}
-            <a id="registerbtn" class="registerbtn"
-               href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "start your 30-day free-trial now! " %}</a>{% trans "<mark>No Credit Card is required during trial period</mark> and, even when you have subscribed, you can easily cancel at any time, just clicking a button!" %}
-        </p>
-        <p><a href="{% url 'genusemediaplanhowto' %}" class="text-primary">{% trans "Liked the case? Click here to see how to do it using MyMensor! " %}</a></p>
-    </div>
+{% block header %}
+    <meta name="description" content="MyMensor">
+    <meta name="keywords" content="MyMensor">
+    <meta name="author" content="Celtapps">
+    <meta property="og:title" content="{% trans "Simple Services Control with Certified Routes" %}">
+    <meta property="og:description"
+          content="{% trans "Control efficiently the way your personnel moves around the city, make remotely checking services performed at client premises a simple task." %}">
+    <meta property="og:image" content="{% static 'images/routesservices.jpg' %}">
+    <meta property="og:image:width" content="1280">
+    <meta property="og:image:height" content="720">
+    <meta property="og:url" content="{% url 'routesservices' %}">
+    <meta property="og:site_name" content="MyMensor Website">
+    <meta property="fb:app_id" content="286196915140475"/>
 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{% trans "Simple Services Control with Certified Routes" %}">
+    <meta name="twitter:description"
+          content="{% trans "Control efficiently the way your personnel moves around the city, make remotely checking services performed at client premises a simple task." %}">
+    <meta name="twitter:image" content="{% static 'images/routesservices.jpg' %}">
+{% endblock %}
+{% block content %}
+    {% get_current_language as LANGUAGE_CODE %}
+    <div class="mx-auto w-75" style="padding-top: 2rem; padding-bottom: 2rem;">
+        <a href="{% url 'cases' %}"><h6 class="text-uppercase text-dark">{% trans "MyMensor Use Cases" %}</h6></a>
+        {% if LANGUAGE_CODE == "pt" %}
+            <h1 class="pb-3">Controle Simples de Serviços com Rotas Certificadas</h1>
+            <img class="card-img-top img-fluid pb-3" src="{% static 'images/routesservices.jpg' %}"
+                 alt={% trans "Concept of service personnel routes in a city." %}>
+            <p>Controlar eficientemente a forma que o seu pessoal se move pela cidade, sem ter que
+                preencher uma montanha de cadastros e sem mudar a sua forma de trabalhar. E, além disso,
+                <mark>sem custos de implantação!</mark>
+                Parece tentador, não?
+            </p>
+            <p>Com o <strong>MyMensor</strong> você receberá as fotos que o seu pessoal fará durante o trabalho de
+                maneira automática, certificada e segura.</p>
+            <p>Usando a nossa <a href="https://app.mymensor.com">WebApp</a> você verá as rotas que o seu pessoal fez,
+                como, por exemplo, uma imagem da visita de vendas ou da inspeção de segurança, assim que ela tenha sido feita e saberá a
+                localização exata!</p>
+            <p>Além disso as fotos ficam guardadas em nossos servidores na nuvem, sem risco de serem perdidas.</p>
+            <p>Verificar os serviços feitos nas instalações do cliente torna-se tarefa simples com a utilização do MyMensor.
+                O seu funcionário poderá fazer fotos e mini vídeos da ação, sempre com certificação de horário e
+                localização.</p>
+            <p>Mas isto é só o começo! Há muito mais no Mymensor: arquivamento automático,
+                partilhamento automático etc. Então, não espere, <a id="registerbtn" class="registerbtn"
+                                                                    href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">
+                    comece seu teste gratuito de 30 dias agora! </a>
+                <mark>Sem cartão de crédito durante o período de testes</mark>
+                e, mesmo depois que você assinar, você poderá cancelar a qualquer momento, com um único clique de botão!
+            </p>
+            <p><a href="{% url 'routesserviceshowto' %}"
+                  class="text-primary">Gostou do Caso? Clique aqui para ver como fazer isto usando o MyMensor!</a>
+            </p>
+        {% elif LANGUAGE_CODE == "pt-br" %}
+            <h1 class="pb-3">Controle Simples de Serviços com Rotas Certificadas</h1>
+            <img class="card-img-top img-fluid pb-3" src="{% static 'images/routesservices.jpg' %}"
+                 alt={% trans "Concept of service personnel routes in a city." %}>
+            <p>Controlar eficientemente a forma que o seu pessoal se move pela cidade, sem ter que
+                preencher uma montanha de cadastros e sem mudar a sua forma de trabalhar. E, além disso,
+                <mark>sem custos de implantação!</mark>
+                Parece tentador, não?
+            </p>
+            <p>Com o <strong>MyMensor</strong> você receberá as fotos que o seu pessoal fará durante o trabalho de
+                maneira automática, certificada e segura.</p>
+            <p>Usando a nossa <a href="https://app.mymensor.com">WebApp</a> você verá as rotas que o seu pessoal fez,
+                como, por exemplo, uma imagem da visita de vendas ou da inspeção de segurança, assim que ela tenha sido feita e saberá a
+                localização exata!</p>
+            <p>Além disso as fotos ficam guardadas em nossos servidores na nuvem, sem risco de serem perdidas.</p>
+            <p>Verificar os serviços feitos nas instalações do cliente torna-se tarefa simples com a utilização do MyMensor.
+                O seu funcionário poderá fazer fotos e mini vídeos da ação, sempre com certificação de horário e
+                localização.</p>
+            <p>Mas isto é só o começo! Há muito mais no Mymensor: arquivamento automático,
+                partilhamento automático etc. Então, não espere, <a id="registerbtn" class="registerbtn"
+                                                                    href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">
+                    comece seu teste gratuito de 30 dias agora! </a>
+                <mark>Sem cartão de crédito durante o período de testes</mark>
+                e, mesmo depois que você assinar, você poderá cancelar a qualquer momento, com um único clique de botão!
+            </p>
+            <p><a href="{% url 'routesserviceshowto' %}"
+                  class="text-primary">Gostou do Caso? Clique aqui para ver como fazer isto usando o MyMensor!</a>
+            </p>
+        {% else %}
+            <h1 class="pb-3">Simple Services Control with Certified Routes</h1>
+            <img class="card-img-top img-fluid pb-3" src="{% static 'images/routesservices.jpg' %}"
+                 alt={% trans "Concept of service personnel routes in a city." %}>
+            <p>Control efficiently the way your personnel moves around the city without having to fill a
+                mountain of entries and without changing the way you work. Does it look tempting?</p>
+            <p>With <strong> MyMensor </strong> you will receive the photos that your personel is doing during their work in an automatic, certified and safe way.</p>
+            <p>Using our <a href="https://app.mymensor.com"> WebApp </a> you will see the routes that your personnel
+                made, such as sales stop or a safety inspection, as soon as it was snapped and will know the exact location!
+            </p>
+            <p>In addition, the photos are stored in our servers in the cloud, without risk of being lost.</p>
+            <p>Checking work done at client's premises becomes a simple task with the use of MyMensor. Your
+                personnel can take photos and mini videos of the action, always with time and location certification.</p>
+            <p>But this is just the beginning! There is much more at Mymensor: automatic filing, automatic sharing, etc.
+                So, do not wait, <a id="registerbtn" class="registerbtn"
+                                    href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"> start your
+                    30-day free trial now! </a>
+                <mark> No credit card during the trial period</mark>
+                , and even after you subscribe, you can cancel at any time with a single click of a button!
+            </p>
+            <p><a href="{% url 'routesserviceshowto' %}"
+                  class="text-primary">Liked the case? Click here to see how to do it using MyMensor!</a>
+            </p>
+        {% endif %}
+        <div id="sharebtns" class="ssk-xs ssk-group">
+            <a href="" class="ssk ssk-facebook"></a>
+            <a href="" class="ssk ssk-twitter"></a>
+            <a href="" class="ssk ssk-google-plus"></a>
+            <a href="whatsapp://send?text=https%3A%2F%2Fmymensor.com%2F{{ LANGUAGE_CODE }}%2Fcases%2Froutesservices"
+               class="ssk ssk-whatsapp"></a>
+            <a href="" class="ssk ssk-email"></a>
+        </div>
+
+    </div>
+{% endblock %}
+{% block javascript %}
+    <script type="text/javascript">
+        SocialShareKit.init({
+            selector: '.ssk',
+            url: 'https://mymensor.com/{{ LANGUAGE_CODE }}/cases/routesservices/'
+        });
+    </script>
 {% endblock %}
