--- a/mymwebsite/templates/cases.html
+++ b/mymwebsite/templates/cases.html
@@ -54,6 +54,14 @@
                 <p class="card-text">{% trans "We will describe a couple of possible uses that you will have for the tool that MyMensor can be in your new business. We think that this will be very beneficial for your new endeavor, as it will keep costs down, it is very modern and safe, and if all goes wrong, you can just cancel with no hidden costs!" %}</p>
             </div>
         </div>
+        <div id="routesservices" class="card m-3 card-outline-secondary" style="width: 22rem;">
+            <img class="card-img-top img-fluid" src="{% static 'images/routesservices.jpg' %}"
+                 alt={% trans "Concept of service personnel routes in a city." %}>
+            <div class="card-body p-3">
+                <h4 class="card-title">{% trans "Simple Services Control with Certified Routes" %}</h4>
+                <p class="card-text">{% trans "Control efficiently the way your services personnel moves around the city, make remotely checking remote services on client's premises a simple task." %}</p>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
