--- a/mymwebsite/templates/howto.html
+++ b/mymwebsite/templates/howto.html
@@ -62,6 +62,14 @@
                 <p class="card-text">{% trans "In MyMensor you can set up automatic sharing to a Twitter account that you choose and also to an email account! Click and learn how to do it!" %}</p>
             </div>
         </div>
+        <div id="routesservices" class="card m-3 card-outline-secondary" style="width: 22rem;">
+            <img class="card-img-top img-fluid" src="{% static 'images/routesservices.jpg' %}"
+                 alt={% trans "Concept of service personnel routes in a city." %}>
+            <div class="card-body p-3">
+                <h4 class="card-title">{% trans "Simple Services Control with Certified Routes" %}</h4>
+                <p class="card-text">{% trans "How this can be done using MyMensor???? Click and learn!!!" %}</p>
+            </div>
+        </div>
     </div>
 {% endblock %}
 {% block javascript %}
